--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 twitter {
-	consumerKey: "yAXReHo2XYwuT1QeDxdNLA"
-	consumerSecret: "QrvxR0wfFGXzxbbqxaqmSlHSMkAkQhXQXGO6Wfyzus"
-	accessToken: "190985915-98oTDSAm3HMu6mQR2LxMvaZpyjUfdTd5rSvyXTKs"
-	accessTokenSecret: "qNSvHqhBL7GiufRH4kPJrcYbs5eu21VpLqOR2ryTVvZzN"
+	consumerKey: ${?TWITTER_CONSUMER_KEY}
+	consumerSecret: ${?TWITTER_CONSUMER_SECRET}
+	accessToken: ${?TWITTER_ACCESS_TOKEN}
+	accessTokenSecret: ${?TWITTER_ACCESS_TOKEN_SECRET}
 }
