--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ null/
 
 ### JVM crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### spark streaming
+checkpoint/
